adapt for genai

--- a/index.html
+++ b/index.html
@@ -41,12 +41,13 @@
         </div>
     </nav>
     <section id="title_sec" class="bg_color_strong pt-5 pb-5">
-        <div class="px-5 text-center"">
+        <div class="px-5 text-center">
             <div class="overflow-hidden border-bottom mt-5" style="max-height: 60vh; min-height: 60vh;">
-                <div class="container px-5 mt-5">
-                    <img src="./images/SailingShip7.svg" class="img-fluid" alt="ship header" loading="lazy">
+                <div class="container px-5 mt-5" style="min-width: 600px;">
+                    <img src="./images/SailingShip7.svg" class="img-fluid" alt="ship header" loading="lazy" >
                 </div>
             </div>
+
             <div class="overflow-hidden m-5">
                 <h1 class="display-4 fw-bold text-body-emphasis">I am Dominic</h1>
                 <div class="col-lg-6 mx-auto">
@@ -96,9 +97,11 @@
                     <h4>A1 Telekom Austria</h4>
                     <ul>
                         <li>Data Science Platform Design</li>
+                        <li>Generative AI Architecture & Enablement</li>
                         <li>Cloud & Infrastructure Architecture
                         </li>
                         <li>MLOps & DevOps Processes</li>
+
                         <li>CI/CD</li>
                     </ul>
                 </div>
@@ -385,6 +388,18 @@
                                         <div id="collapseLead" class="accordion-collapse collapse" data-bs-parent="#accordionroles">
                                             <div class="accordion-body">
                                                 In my capacity as a <strong> Team Lead</strong> or <strong>Project Lead</strong>, my responsibilities encompass translating requirements into solutions and managing task distribution within the team. I lead by example, aiming to inspire and empower my colleagues. Drawing upon the knowledge I have accumulated over the years,  <strong>mentoring</strong> and <strong>guiding</strong> are integral aspects of my role.
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="accordion-item">
+                                        <h2 class="accordion-header">
+                                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseGenAI" aria-expanded="true" aria-controls="collapseGenAI">
+                                                Generative AI Enabler
+                                            </button>
+                                        </h2>
+                                        <div id="collapseGenAI" class="accordion-collapse collapse" data-bs-parent="#accordionroles">
+                                            <div class="accordion-body">
+                                                My work starts where ChatGPT's prowess ends. I thrive on pushing the boundaries of generative AI, collaborating closely with data experts to empower and democratize its applications. From crafting ingenious prompts to developing user-friendly web interfaces for data exploration, I'm at the forefront of transforming ideas into reality. As a pivotal member of the generative AI elite, I craft innovative solutions and architectures aimed at delivering unparalleled value to our clients.
                                             </div>
                                         </div>
                                     </div>
@@ -695,6 +710,34 @@
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
                     <div class="col">
                         <div class="card shadow-sm">
+                            <img src="./images/app-for-creating-a-budget-table-and-optimize-cost-spending-411531638.png" alt="snippet of vis" srcset="" class="bd-placeholder-img card-img-top" width="100%" height="225">
+                            <div class="card-body">
+                                <p class="card-text">Full-Stack nodejs app for tracking expenses.</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        <a type="button" class="btn btn-sm btn-outline-secondary" id="ibutton" href="./public/blog/20231018_billtrack.html">View</a>
+                                    </div>
+                                    <small class="text-body-secondary">2023-10</small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card shadow-sm">
+                            <img src="./images/azure-bring-your-own-data-gpt-full-stack-app.png" alt="snippet" srcset="" class="bd-placeholder-img card-img-top" width="100%" height="225">
+                            <div class="card-body">
+                                <p class="card-text">Azure <i>Bring your own data</i> GPT Full-Stack App </p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        <a type="button" class="btn btn-sm btn-outline-secondary" id="ibutton" href="./public/blog/20231012_azure_bring_your_own.html">View</a>
+                                    </div>
+                                    <small class="text-body-secondary">2023-10</small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card shadow-sm">
                             <img src="./images/visualization-is-part-of-my-life-since-high-school-university-and-worklife.png" alt="snippet of vis" srcset="" class="bd-placeholder-img card-img-top" width="100%" height="225">
                             <div class="card-body">
                                 <p class="card-text">Visualization is part of my life. Since high school, university and worklife</p>
@@ -717,20 +760,6 @@
                                         <a type="button" class="btn btn-sm btn-outline-secondary" id="ibutton" href="./public/blog/20230921_azure_data_science.html">View</a>
                                     </div>
                                     <small class="text-body-secondary">2023-09</small>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card shadow-sm">
-                            <img src="./images/azure-bring-your-own-data-gpt-full-stack-app.png" alt="snippet" srcset="" class="bd-placeholder-img card-img-top" width="100%" height="225">
-                            <div class="card-body">
-                                <p class="card-text">Azure <i>Bring your own data</i> GPT Full-Stack App </p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <a type="button" class="btn btn-sm btn-outline-secondary" id="ibutton" href="./public/blog/20231012_azure_bring_your_own.html">View</a>
-                                    </div>
-                                    <small class="text-body-secondary">2023-10</small>
                                 </div>
                             </div>
                         </div>
